# aiogram_bot_template

./: .dockerignore  .editorconfig  .env.dist  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  config.yml  dev-requirements.txt  docker-compose.example.yml  pyproject.toml  requirements.txt  telegram-bot.service
aiogram_bot_template/: __main__.py  app_config.py  const.py  factories.py  runners.py  settings.py
aiogram_bot_template/controllers/: user.py
aiogram_bot_template/enums/: locale.py  middleware_event_type.py
aiogram_bot_template/factory/: __init__.py  app_config.py  bot.py  dispatcher.py  i18n.py  redis.py  session_pool.py
aiogram_bot_template/factory/telegram/: __init__.py  bot.py  dispatcher.py  i18n.py
aiogram_bot_template/middlewares/: __init__.py  event_typed.py
aiogram_bot_template/middlewares/outer/: database.py  i18n.py  user.py
aiogram_bot_template/models/: base.py
aiogram_bot_template/models/config/: __init__.py
aiogram_bot_template/models/config/env/: __init__.py  app.py  base.py  common.py  postgres.py  redis.py  telegram.py
aiogram_bot_template/models/dto/: __init__.py  user.py
aiogram_bot_template/models/sql/: base.py  user.py
aiogram_bot_template/models/sql/mixins/: timestamp.py
aiogram_bot_template/services/database/: __init__.py  context.py  create_pool.py  uow.py
aiogram_bot_template/services/database/models/: base.py  user.py
aiogram_bot_template/services/database/repositories/: __init__.py  base.py  general.py  user.py
aiogram_bot_template/services/redis/: repository.py
aiogram_bot_template/services/sql/: uow.py
aiogram_bot_template/services/sql/repositories/: __init__.py  base.py  users.py
aiogram_bot_template/telegram/filters/: __init__.py  states.py
aiogram_bot_template/telegram/handlers/admin/: __init__.py
aiogram_bot_template/telegram/handlers/common/: __init__.py  menu.py  start.py
aiogram_bot_template/telegram/handlers/extra/: errors.py  pm.py
aiogram_bot_template/telegram/handlers/main/: __init__.py
aiogram_bot_template/telegram/keyboards/: __init__.py  base.py
aiogram_bot_template/telegram/keyboards/callback_data/: menu.py
aiogram_bot_template/telegram/middlewares/: event_typed.py
aiogram_bot_template/telegram/middlewares/outer/: __init__.py  database.py  i18n.py  user.py
aiogram_bot_template/telegram/middlewares/request/: __init__.py  retry.py
aiogram_bot_template/utils/: custom_types.py  mjson.py  msgspec_json.py  time.py
aiogram_bot_template/utils/loggers/: __init__.py  multiline.py
aiogram_bot_template/utils/logging/: __init__.py
app/: __main__.py  const.py  runners.py
app/endpoints/: healthcheck.py  telegram.py
app/enums/: __init__.py  locale.py  middleware_event_type.py  middlewares.py
app/errors/: base.py  bot.py  http.py
app/factory/: __init__.py  app_config.py  redis.py  services.py  session_pool.py
app/factory/telegram/: __init__.py  bot.py  dispatcher.py  fastapi.py  i18n.py
app/models/: base.py
app/models/config/: __init__.py  assets.py
app/models/config/env/: __init__.py  app.py  base.py  common.py  redis.py  server.py  sql_alchemy.py  telegram.py
app/models/dto/: healthcheck.py  user.py
app/models/sql/: __init__.py  base.py  user.py
app/models/state/: base.py
app/runners/: app.py  lifespan.py  polling.py  webhook.py
app/services/: base.py  healthcheck.py  user.py
app/services/crud/: __init__.py  base.py  user.py
app/services/database/: __init__.py
app/services/database/redis/: __init__.py  keys.py  repository.py
app/services/database/sql/: context.py  uow.py
app/services/postgres/: __init__.py
app/services/redis/: __init__.py  cache_wrapper.py  keys.py  repository.py
app/telegram/filters/: __init__.py
app/telegram/helpers/: __init__.py  errors.py  messages.py
app/telegram/keyboards/: common.py  menu.py
app/telegram/middlewares/: __init__.py  event_typed.py  message_helper.py  user.py
app/utils/: custom_types.py  key_builder.py  time.py  yaml.py
app/utils/localization/: __init__.py  helpers.py  manager.py  patches.py
app/utils/logging/: setup.py
assets/: commands.yml
assets/messages/de/: errors.ftl  menu.ftl
assets/messages/en/: deposit.ftl  errors.ftl  menu.ftl
assets/messages/ua/: errors.ftl  menu.ftl
assets/messages/uk/: deposit.ftl  errors.ftl  menu.ftl
bot/: __main__.py  exceptions.py  factories.py  factory.py  runners.py  settings.py
bot/enums/: __init__.py  locale.py
bot/filters/: __init__.py  chat.py  magic_data.py  states.py
bot/handlers/admin/: __init__.py
bot/handlers/extra/: __init__.py  errors.py  pm.py
bot/handlers/main/: __init__.py  start.py
bot/keyboards/: __init__.py  base.py
bot/middlewares/: __init__.py  event_typed.py
bot/middlewares/inner/: __init__.py  commit.py  user_auto_creation.py
bot/middlewares/outer/: __init__.py  database.py  i18n.py  l10n.py  user.py  user_access.py
bot/middlewares/request/: __init__.py  retry.py
bot/models/: __init__.py  base.py  user.py
bot/services/: __init__.py  aiohttp_client.py  database.py
bot/services/database/: __init__.py  base.py  main.py  user.py
migrations/: _get_next_revision_id.py  _get_revision_id.py  env.py  script.py.mako
migrations/versions/: 001_created_table.py  001_initial.py
nginx/: caller.example.conf
scripts/: docker-entrypoint.sh  extract-ftl.sh  extract_ftl.sh  run-bot.sh
systemd/: telegram-bot.example.service
translations/de/: messages.ftl
translations/en/: messages.ftl
translations/ru/: messages.ftl
translations/ua/: messages.ftl
translations/uk/: messages.ftl
utils/: loggers.py  mixins.py  mjson.py  yaml_reader.py
utils/logger/: __init__.py  multiline.py
utils/loggers/: __init__.py  multiline.py
(+14 files in other folders)
