[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aiogram_bot_template"
version = "1.0"
description = "Aiogram 3.x bot template using PostgreSQL (asyncpg) with SQLAlchemy + alembic"
authors = ["wakaree <nullmatawasoradesu@gmail.com>"]
readme = "README.md"
repository = "https://github.com/wakaree/aiogram_bot_template"

[tool.poetry.dependencies]
python = "^3.11,<3.13"  # Excluded 3.13 version due to msgspec incompatibility
aiogram = "^3.14.0"
aiogram_i18n = "^1.4"
aiohttp = "^3.10.8"
alembic = "^1.14.0"
asyncpg = "^0.29.0"
redis = "^5.1.0"
sqlalchemy = "^2.0.35"
msgspec = "^0.18.6"
pydantic = "^2.9.2"
pydantic_settings = "^2.6.0"
fluent_runtime = "^0.4.0"
aiogram-contrib = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
ruff = "^0.6.8"
ftl-extract =  "^0.4.5"

[tool.black]
line-length = 99
exclude = "\\.?venv|\\.?tests"

[tool.ruff]
target-version = "py38"
line-length = 99
lint.select = [
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "Q",
    "T",
    "W",
    "YTT",
]
exclude = [
    ".venv",
    ".idea",
    ".tests",
]

[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy"
]
exclude = [
    "venv",
    ".venv",
    ".idea",
    ".tests",
]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = ["redis.*"]
ignore_missing_imports = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["aiogram_bot_template.telegram.handlers.*"]
strict_optional = false
warn_return_any = false
